# CCplot

./: .gitattributes  CMakeLists.txt  CMakeLists.txt.user.72f9f32  README.md  build.bat  config.bat  run.bat
.VSCodeCounter/2022-06-24_13-57-58/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
CCPlot_test/: CMakeLists.txt  CMakeLists.txt.user.72f9f32
CCPlot_test/source/: ccplotangularvelocity.cpp  ccplotangularvelocity.h  ccplotbendmoment.cpp  ccplotbendmoment.h  ccplotforcexy.cpp  ccplotforcexy.h  ccplotforcez.cpp  ccplotforcez.h  ccploticeresistence.cpp  ccploticeresistence.h  ccplotshipacc.cpp  ccplotshipacc.h  ccplotshipangle.cpp  ccplotshipangle.h  ccplotshipdisplacement.cpp  ccplotshipdisplacement.h  ccplotshipvelocity.cpp  ccplotshipvelocity.h  ccplotwaterline.cpp  ccplotwaterline.h  main.cpp  plotbase.cpp  plotbase.h
build-CCPlot_test-Desktop_Qt_5_12_12_MSVC2017_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-CCPlot_test-Desktop_Qt_5_12_12_MSVC2017_64bit-Debug/CCPlot_test_autogen/EWIEGA46WW/: moc_widget.cpp
build-CCPlot_test-Desktop_Qt_5_12_12_MSVC2017_64bit-Debug/CCPlot_test_autogen/HT55KLNFXI/: qrc_resource.cpp
build-CCPlot_test-Desktop_Qt_5_12_12_MSVC2017_64bit-Debug/CCPlot_test_autogen/include/: ui_widget.h
build-CCPlot_test-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-CCPlot_test-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
build-CCPlot_test-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/CCPlot_test_autogen/: deps  mocs_compilation.cpp
build-CCPlot_test-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/CCPlot_test_autogen/CAWN4ZDDTK/: moc_widget.cpp  moc_widget.cpp.d
build-CCPlot_test-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/CCPlot_test_autogen/EWIEGA46WW/: moc_widget.cpp  moc_widget.cpp.d
build-CCPlot_test-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/CCPlot_test_autogen/HMSPJED3UK/: moc_qcustomplot.cpp  moc_qcustomplot.cpp.d
build-CCPlot_test-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/CCPlot_test_autogen/HT55KLNFXI/: qrc_resource.cpp
doc/: Doxyfile
doc/html/: animationprop_8cpp.html  animationprop_8cpp__incl.map  animationprop_8cpp__incl.md5  animationprop_8h.html  animationprop_8h__dep__incl.map  animationprop_8h__dep__incl.md5  animationprop_8h_source.html  annotated.html  axisprop_8cpp.html  axisprop_8cpp__incl.map  axisprop_8cpp__incl.md5  axisprop_8h.html  axisprop_8h__dep__incl.map  axisprop_8h__dep__incl.md5  axisprop_8h__incl.map  axisprop_8h__incl.md5  axisprop_8h_source.html  ccplot_8cpp.html  ccplot_8cpp__incl.map  ccplot_8cpp__incl.md5  ccplot_8h.html  ccplot_8h__dep__incl.map  ccplot_8h__dep__incl.md5  ccplot_8h__incl.map  ccplot_8h__incl.md5  ccplot_8h_source.html  ccplotbase_8cpp.html  ccplotbase_8cpp__incl.map  ccplotbase_8cpp__incl.md5  ccplotbase_8h.html  ccplotbase_8h__dep__incl.map  ccplotbase_8h__dep__incl.md5  ccplotbase_8h__incl.map  ccplotbase_8h__incl.md5  ccplotbase_8h_source.html  ccplotelements_8cpp.html  ccplotelements_8cpp__incl.map  ccplotelements_8cpp__incl.md5  ccplotelements_8h.html  ccplotelements_8h__dep__incl.map  (+649 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  (+84 more)
doc/latex/: animationprop_8cpp.tex  animationprop_8cpp__incl.md5  animationprop_8h.tex  animationprop_8h__dep__incl.md5  animationprop_8h_source.tex  annotated.tex  axisprop_8cpp.tex  axisprop_8cpp__incl.md5  axisprop_8h.tex  axisprop_8h__dep__incl.md5  axisprop_8h__incl.md5  axisprop_8h_source.tex  ccplot_8cpp.tex  ccplot_8cpp__incl.md5  ccplot_8h.tex  ccplot_8h__dep__incl.md5  ccplot_8h__incl.md5  ccplot_8h_source.tex  ccplotbase_8cpp.tex  ccplotbase_8cpp__incl.md5  ccplotbase_8h.tex  ccplotbase_8h__dep__incl.md5  ccplotbase_8h__incl.md5  ccplotbase_8h_source.tex  ccplotelements_8cpp.tex  ccplotelements_8cpp__incl.md5  ccplotelements_8h.tex  ccplotelements_8h__dep__incl.md5  ccplotelements_8h__incl.md5  ccplotelements_8h_source.tex  ccplotinterication_8cpp.tex  ccplotinterication_8cpp__incl.md5  ccplotinterication_8h.tex  ccplotinterication_8h__dep__incl.md5  ccplotinterication_8h__incl.md5  ccplotinterication_8h_source.tex  ccplotlayout_8cpp.tex  ccplotlayout_8cpp__incl.md5  ccplotlayout_8h.tex  ccplotlayout_8h__dep__incl.md5  (+309 more)
install/include/: ccplot.h  ccplotelements.h  ccplotinterication.h  ccplotlayout.h  curveprop.h  printprop.h  rangeprop.h  setaxis.h  testplot.h  testplot2.h  titleprop.h
install/resource/: ccplot.qrc
source/: ccplot.qrc  main.cpp
source/base/: ccplot.cpp  ccplot.h  ccplotbase.cpp  ccplotbase.h  ccplotelements.cpp  ccplotelements.h  ccplotinterication.cpp  ccplotlayout.cpp  ccplotlayout.ui  testplot.cpp  testplot.h  testplot2.cpp
source/dialog/: setaxis.cpp  setaxis.ui  setcurve.cpp  setcurve.h  setcurve.ui  setplot.cpp  setplot.h  setplot.ui  setprint.cpp  setprint.h  setprint.ui
source/prop/: animationprop.cpp  animationprop.h  axisprop.cpp  axisprop.h  curveprop.cpp  plotprop.cpp  plotprop.h  point.h  printprop.cpp  rangeprop.cpp  titleprop.cpp
(+706 files in other folders)
